Add sections to the page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,38 @@
       </article>
     </header>
     <main>
-      <section class="first-section"></section>
-      <section></section>
+      <section class="first-section">
+        <h2>Web & Application Development</h2>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint
+            eligendi possimus? Unde officiis magnam laborum ipsa distinctio
+            odio, vero dolores
+          </p>
+          <p>
+            dicta aliquam aperiam repellendus. Perferendis officiis deserunt
+            velit voluptas nobis sequi animi totam, accusantium, ex eius quia,
+            natus quo?
+          </p>
+        </div>
+      </section>
+      <section class="second-section">
+        <article class="card">
+          <img src="" alt="" />
+          <h3></h3>
+          <p></p>
+        </article>
+        <article class="card">
+          <img src="" alt="" />
+          <h3></h3>
+          <p></p>
+        </article>
+        <article class="card">
+          <img src="" alt="" />
+          <h3></h3>
+          <p></p>
+        </article>
+      </section>
       <section></section>
     </main>
     <footer></footer>
