Add cards to second section

--- a/index.html
+++ b/index.html
@@ -37,22 +37,53 @@
       </section>
       <section class="second-section">
         <article class="card">
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img
+            src="./assets/images/pexels-photo-546819.jpeg"
+            alt="Laptop with code"
+          />
+          <div class="card-content-wrapper">
+            <h3>Web Development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              culpa neque quo eum et quasi velit voluptatum cum maiores
+              exercitationem.
+            </p>
+          </div>
         </article>
         <article class="card">
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img
+            src="./assets/images/pexels-photo-607812.jpeg"
+            alt="Social Networks"
+          />
+          <div class="card-content-wrapper">
+            <h3>Mobile Applications</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              culpa neque quo eum et quasi velit voluptatum cum maiores
+              exercitationem.
+            </p>
+          </div>
         </article>
         <article class="card">
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./assets/images/pexels-photo.jpg" alt="Laptop" />
+          <div class="card-content-wrapper">
+            <h3>Tech Marketing</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              culpa neque quo eum et quasi velit voluptatum cum maiores
+              exercitationem.
+            </p>
+          </div>
         </article>
       </section>
-      <section></section>
+      <section class="third-section">
+        <h2>We handle all of your digital needs</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam
+          rerum vel earum error fugiat cupiditate, dolore eius! Minus,
+          explicabo.
+        </p>
+      </section>
     </main>
     <footer></footer>
   </body>
