--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
           error earum soluta voluptatum nisi laboriosam eos saepe asperiores
           dolorum.
         </p>
-        <a class="read-more" href="#">Read more</a>
+        <a class="read-more" href="#second-section">Read more</a>
       </article>
     </header>
     <main>
@@ -35,47 +35,55 @@
           </p>
         </div>
       </section>
-      <section class="second-section">
-        <article class="card">
-          <img
-            src="./assets/images/pexels-photo-546819.jpeg"
-            alt="Laptop with code"
-          />
-          <div class="card-content-wrapper">
-            <h3>Web Development</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              culpa neque quo eum et quasi velit voluptatum cum maiores
-              exercitationem.
-            </p>
-          </div>
-        </article>
-        <article class="card">
-          <img
-            src="./assets/images/pexels-photo-607812.jpeg"
-            alt="Social Networks"
-          />
-          <div class="card-content-wrapper">
-            <h3>Mobile Applications</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              culpa neque quo eum et quasi velit voluptatum cum maiores
-              exercitationem.
-            </p>
-          </div>
-        </article>
-        <article class="card">
-          <img src="./assets/images/pexels-photo.jpg" alt="Laptop" />
-          <div class="card-content-wrapper">
-            <h3>Tech Marketing</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              culpa neque quo eum et quasi velit voluptatum cum maiores
-              exercitationem.
-            </p>
-          </div>
-        </article>
-      </section>
+      <div id="second-section" class="second-section">
+        <ul>
+          <li>
+            <article class="card">
+              <img
+                src="./assets/images/pexels-photo-546819.jpeg"
+                alt="Laptop with code"
+              />
+              <div class="card-content-wrapper">
+                <h3>Web Development</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nostrum culpa neque quo eum et quasi velit voluptatum cum
+                  maiores exercitationem.
+                </p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="card">
+              <img
+                src="./assets/images/pexels-photo-607812.jpeg"
+                alt="Social Networks"
+              />
+              <div class="card-content-wrapper">
+                <h3>Mobile Applications</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nostrum culpa neque quo eum et quasi velit voluptatum cum
+                  maiores exercitationem.
+                </p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="card">
+              <img src="./assets/images/pexels-photo.jpg" alt="Laptop" />
+              <div class="card-content-wrapper">
+                <h3>Tech Marketing</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nostrum culpa neque quo eum et quasi velit voluptatum cum
+                  maiores exercitationem.
+                </p>
+              </div>
+            </article>
+          </li>
+        </ul>
+      </div>
       <section class="third-section">
         <h2>We handle all of your digital needs</h2>
         <p>
@@ -84,7 +92,34 @@
           explicabo.
         </p>
       </section>
+      <section class="fourth-section">
+        <div class="blue-box">
+          <h2>Contact Us</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum,
+            suscipit. Rerum ducimus a quod, ut et voluptas obcaecati unde fuga.
+          </p>
+          <a href="mailto:contact@acmewebsolutions.test" target="_blank"
+            >contact@acmewebsolutions.test</a
+          >
+        </div>
+        <div class="black-box">
+          <h2>About Our Company</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            earum porro deserunt, deleniti, quae facere repudiandae, officiis
+            est exercitationem nobis iusto doloremque! Soluta excepturi in aut
+            suscipit amet temporibus quo?
+          </p>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Acme Web Solutions</p>
+      <p>
+        Project By
+        <a href="http://traversymedia.com/" target="_blank">Traversy Media</a>
+      </p>
+    </footer>
   </body>
 </html>
