Change names of html-classes, add more css-variables for colors

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           error earum soluta voluptatum nisi laboriosam eos saepe asperiores
           dolorum.
         </p>
-        <a class="read-more" href="#second-section">Read more</a>
+        <a class="read-more" href="#card-section">Read more</a>
       </article>
     </header>
     <main>
-      <section class="first-section">
+      <section class="main-inform-section">
         <h2>Web & Application Development</h2>
         <div>
           <p>
@@ -35,7 +35,7 @@
           </p>
         </div>
       </section>
-      <div id="second-section" class="second-section">
+      <div id="card-section" class="card-section">
         <ul>
           <li>
             <article class="card">
@@ -84,7 +84,7 @@
           </li>
         </ul>
       </div>
-      <section class="third-section">
+      <section class="sub-inform-section">
         <h2>We handle all of your digital needs</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam
@@ -92,7 +92,7 @@
           explicabo.
         </p>
       </section>
-      <section class="fourth-section">
+      <section class="about-section">
         <div class="blue-box">
           <h2>Contact Us</h2>
           <p>
